# tsuzuri

./: .gitignore  .rustfmt.toml  Cargo.toml  README.ja.md  README.md
crates/tsuzuri/: Cargo.toml
crates/tsuzuri/src/: aggregate.rs  error.rs  lib.rs  macros.rs  store.rs
crates/tsuzuri/src/store/: payload.rs  sync.rs
crates/tsuzuri/src/store/sync/: error.rs  event_store.rs  memory_store.rs  query_store.rs  reader.rs  writer.rs
crates/tsuzuri_derive/: Cargo.toml
crates/tsuzuri_derive/src/: command.rs  event.rs  lib.rs
examples/axum_example/: Cargo.toml
examples/axum_example/src/: main.rs
