[workspace]
resolver = "2"
members = ["crates/tsuzuri", "examples/axum_example", "crates/tsuzuri_derive"]

[workspace.package]
version = "2024.2.12"
authors = ["Mataki Tanaka <mataki.tanaka.works@gmail.com>"]
edition = "2021"
repository = "https://github.com/ohmylike/tsuzuri"
homepage = "https://github.com/ohmylike/tsuzuri"
documentation = ""
readme = "README.md"
keywords = ["tsuzuri", "cqrs", "event-sourcing"]
license = "MIT"

[workspace.dependencies]
tsuzuri = { path = "crates/tsuzuri", version = "2025.2.12" }
tsuzuri_derive = { path = "crates/tsuzuri_derive", version = "2025.2.12" }

heck = "0.5"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tunnel = "0.1"
async-trait = "0.1"

# cache
moka = { version = "0.12", features = ["future"] }
futures-util = "0.3"

# time
time = { version = "0.3" }
