[package]
name = "tsuzuri"
version = "2025.2.12"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
description = "Tsuzuri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsuzuri"

[dependencies]
tsuzuri_derive = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
heck = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-tunnel = { workspace = true, features = ["sender"] }
moka = { workspace = true, features = ["future", "quanta"] }
time = { workspace = true }
